@@ -275,6 +275,8 @@ Library
 Extension Modules
 -----------------
 
+- Issue #15000: Support the "unique" x32 architecture in _posixsubprocess.c.
+
 - Issue #9041: An issue in ctypes.c_longdouble, ctypes.c_double, and
   ctypes.c_float that caused an incorrect exception to be returned in the
   case of overflow has been fixed.
